# agentcord

./: .gitignore  AGENTS.md  CONTRIBUTING.md  DEVELOPMENT.md  README.md
.github/: dependabot.yml
.github/workflows/: macos.yml  release.yml  windows.yml
AgentCord/: AnthropicStatus.swift  App.swift  ClaudeSession.swift  ClaudeUsage.swift  DiscordIPC.swift  LoginItem.swift  PresenceController.swift  Settings.swift  SleepGuard.swift
AgentCord.xcodeproj/: project.pbxproj
ClaudeCodeRPC/: App.swift  ClaudeCodeRPC.entitlements  ClaudeSession.swift  ClaudeUsage.swift  DiscordIPC.swift  LoginItem.swift  Models.swift  PresenceController.swift  Settings.swift
ClaudeCodeRPC.xcodeproj/: project.pbxproj
ClaudeCodeRPC.xcodeproj/xcshareddata/xcschemes/: ClaudeCodeRPC.xcscheme
macos/AgentCord/: App.swift  ClaudeUsage.swift  CodexSession.swift  CodexUsage.swift  CursorSession.swift  CursorUsage.swift  GrokSession.swift  GrokUsage.swift  Models.swift  PresenceController.swift  ProviderStatus.swift  Settings.swift
macos/AgentCord.xcodeproj/: project.pbxproj
macos/AgentCord.xcodeproj/xcshareddata/xcschemes/: AgentCord.xcscheme
native/: .gitignore  README.md  app.zon
native/src/: app.native  app_model.zig  codex_session.zig  codex_usage.zig  cursor_session.zig  cursor_usage.zig  discord_ipc.zig  grok_session.zig  grok_usage.zig  json_lite.zig  main.zig  presence.zig  tests.zig  usage_cache.zig  usage_fx.zig  win32_fs.zig
web/: README.md  astro.config.mjs  package-lock.json  package.json  wrangler.jsonc
web/public/: AgentCord.dmg  robots.txt
web/src/pages/: index.astro
windows/: .gitignore  AgentCord.csproj  Cargo.toml  ClaudeSession.cs  DiscordIpc.cs  Models.cs  PresenceController.cs  Program.cs  README.md  Settings.cs  TrayApplicationContext.cs  app.rc  build.rs
windows-native/: AgentCord.csproj  AnthropicStatus.cs  Autostart.cs  ClaudeSession.cs  ClaudeUsage.cs  DiscordIpc.cs  Format.cs  Models.cs  PopoverWindow.xaml  PopoverWindow.xaml.cs  Program.cs  README.md  Settings.cs  SleepGuard.cs  TrayApplicationContext.cs
windows/src/: autostart.rs  claude_session.rs  claude_usage.rs  discord_ipc.rs  main.rs  models.rs  presence_controller.rs  settings.rs  tray.rs  usage_poller.rs  util.rs
