[package]
name = "agentcord"
version = "0.1.0"
edition = "2021"
description = "Put your Claude Code activity on your Discord profile (Windows native tray app)"

[[bin]]
name = "agentcord"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Timestamp parsing + local-timezone math (the midnight reset). The `clock`
# feature pulls OS-timezone crates that need `dlltool` to link under the GNU
# toolchain — already required here anyway, since eframe/tray-icon pull the same
# `windows-*` crates.
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
eframe = "0.34.3"
tray-icon = "0.24.1"
image = { version = "0.25.10", default-features = false, features = ["png"] }

# Win32 bindings used only to read the work area (so the popover anchors above
# the taskbar). The tray icon and window come from tray-icon/eframe.
[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.59"
features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"]

# Possible later: `notify` for instant transcript updates (we re-scan on a timer
# for now, like the macOS app's fallback timer).

[profile.release]
opt-level = "z"   # optimize for size — this is a tiny background utility
lto = true
codegen-units = 1
strip = true
panic = "abort"
